testsuite/veronac/codegen/compile-fail/main-bad-return-type.out/stderr.txt
main-bad-return-type.verona:5:3: error: Method 'main' has an invalid signature
  main(): U64 { 0 }
  ^~~~
1 error generated
